--- a/Server/static/game.html
+++ b/Server/static/game.html
@@ -17,6 +17,7 @@
 
 
 <script>
+    // console.log("hiii")
     var canvas = document.getElementById("canvas");
     var ctx = canvas.getContext("2d");
     draw();
@@ -25,13 +26,17 @@
 
     function startGame() {
         var socket = io.connect({transports: ['websocket']});
-        socket.on('gs', parseGameState);
+        socket.on('gameState', parseGameState);
 
     }
     function parseGameState(event) {
         gs = JSON.parse(event);
+        console.log(gs)
+        console.log("hello")
+
         for(let i of gs['players']) {
-            drawplayer( 100, 200, "blue");
+            console.log(i);
+            drawplayer( i['x'], i['y'], 'blue');
         }
         // for(let j of gs['projectiles']) {
         //     Circle(j['x'], j['y'], "black", 1);
@@ -40,9 +45,8 @@
 
     function drawplayer(x, y, color) {
         ctx.fillStyle = color;
-        ctx.fillRect(10 , 200 ,x, y);
-        ctx.strokeStyle = 'black';
-        ctx.strokeRect(10 , 200, x,y);
+        ctx.fillRect(x*10 , y*10 ,50,100);
+
     }
     function Circle(x, y, color, size) {
         ctx.fillStyle = color;
